# Robotics-polimi-course

./: README.md
project1/src/project1/: CMakeLists.txt  package.xml
project1/src/project1/cfg/: dynamic_rec.cfg
project1/src/project1/launch/: project_launch.launch
project1/src/project1/src/: odometry_calculator.cpp
project1/src/project1/srv/: SetPose.srv
project1/src/project1_calibration/: CMakeLists.txt  package.xml
project1/src/project1_calibration/src/: calibration.cpp
project2/: CMakeLists.txt  package.xml
project2/launch/: amcl.launch  amcl.launch.xml  gmapping.launch  gmapping.launch.xml
project2/maps/: map.pgm
project2/rviz/: amcl_config.rviz  gmapping_config.rviz
